unpackaged/main/default/objects/bt_stripe__Transaction_Validation_Rules__c/bt_stripe__Transaction_Validation_Rules__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Settings to fine tune Transaction Validation Rules.</description>
    <label>Blackthorn Pay - Transaction Validations</label>
</CustomObject>