unpackaged/main/default/objects/bt_stripe__Transaction_Validation_Rules__c/fields/bt_stripe__TR_Currency_Validation__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__TR_Currency_Validation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TR Currency Validation</label>
    <type>Checkbox</type>
</CustomField>