unpackaged/main/default/objects/bt_stripe__Transaction_Validation_Rules__c/fields/bt_stripe__TR_Validate_Status_Transition__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__TR_Validate_Status_Transition__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Blocks in-valid manual updates of Transaction Status or Payment Status.</inlineHelpText>
    <label>TR Validate Status Transition</label>
    <type>Checkbox</type>
</CustomField>